Fixes placement error of long horizontal navs on small screens

--- a/jquery.fullPage.css
+++ b/jquery.fullPage.css
@@ -100,6 +100,7 @@ html, body {
     z-index: 4;
     left: 50%;
     opacity: 1;
+    white-space: nowrap;
 }
 .fullPage-slidesNav.bottom {
     bottom: 17px;
